--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -21,6 +21,61 @@
 			</div>
 		</div>
 		<!-- login form -->
+		<form method="post" action="login.html" th:action="@{/insert}" th:object="${insertAdministratorForm}">
+						<fieldset>
+							<legend>管理者登録<br>(システムにログインできる管理者を登録します)</legend>
+							<!-- 氏名 -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="name">
+											氏名:
+										</label>
+										<label class="error-messages">
+											氏名を入力してください
+										</label>
+										<input type="text" name="name" th:field="*{name}" id="name" class="form-control" placeholder="山田太郎">
+									</div>
+								</div>
+							</div>
+							<!-- メールアドレス -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="mailAddress">
+											メールアドレス:
+										</label>
+										<label  class="error-messages">
+											メールアドレスを入力してください
+										</label>
+										<input type="text" name="mailAddress" th:field="*{mailAddress}" id="mailAddress" class="form-control" placeholder="yamada@mail.com">
+									</div>
+								</div>
+							</div>
+							<!-- パスワード -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<label for="passwaord">
+											パスワード:
+										</label>
+										<label class="error-messages">
+											パスワードを入力してください
+										</label>
+										<input type="password" name="password" th:field="*{password}" id="password" class="form-control" placeholder="password">
+									</div>
+								</div>
+							</div>
+							<!-- 登録ボタン -->
+							<div class="form-group">
+								<div class="row">
+									<div class="col-sm-12">
+										<button type="submit" class="btn btn-primary">登録</button>
+									</div>
+								</div>
+							</div>
+						</fieldset>
+					</form>
 		<div class="row">
 			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-10 col-xs-12">
 				<!-- 背景をグレーに、埋め込んだようなコンポーネント -->
