--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -5,8 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>従業員管理システム</title>
-<link rel="stylesheet" href="../../static/css/bootstrap.css" th:href="@{/css/bootstrap.css}" >
-<link rel="stylesheet" href="../../static/css/style.css" th:href="@{/css/style.css}" >
+<link rel="stylesheet" href="../../static/css/bootstrap.css"
+	th:href="@{/css/bootstrap.css}">
+<link rel="stylesheet" href="../../static/css/style.css"
+	th:href="@{/css/style.css}">
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -17,24 +19,33 @@
 		<!-- 上余白 -->
 		<div class="row">
 			<div class="col-lg-offset-0 col-lg-6 col-md-8 col-sm-10 col-xs-12">
-				<img src="../../static/img/header_logo.png" th:src="@{/img/header_logo.png}">
+				<img src="../../static/img/header_logo.png"
+					th:src="@{/img/header_logo.png}">
 			</div>
 		</div>
-		<!-- login form -->
-		<form method="post" action="login.html" th:action="@{/insert}" th:object="${insertAdministratorForm}">
+		<div class="row">
+			<div
+				class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-10 col-xs-12">
+				<!-- 背景をグレーに、埋め込んだようなコンポーネント -->
+				<div class="well">
+
+
+					<!-- ここから上を編集する必要はありません -->
+					<!-- login form -->
+					<form method="post" action="login.html" th:action="@{/insert}"
+						th:object="${insertAdministratorForm}">
 						<fieldset>
-							<legend>管理者登録<br>(システムにログインできる管理者を登録します)</legend>
+							<legend>
+								管理者登録<br>(システムにログインできる管理者を登録します)
+							</legend>
 							<!-- 氏名 -->
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="name">
-											氏名:
-										</label>
-										<label class="error-messages">
-											氏名を入力してください
-										</label>
-										<input type="text" name="name" th:field="*{name}" id="name" class="form-control" placeholder="山田太郎">
+										<label for="name"> 氏名: </label> <label class="error-messages">
+											氏名を入力してください </label> <input type="text" name="name"
+											th:field="*{name}" id="name" class="form-control"
+											placeholder="山田太郎">
 									</div>
 								</div>
 							</div>
@@ -42,13 +53,11 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="mailAddress">
-											メールアドレス:
-										</label>
-										<label  class="error-messages">
-											メールアドレスを入力してください
-										</label>
-										<input type="text" name="mailAddress" th:field="*{mailAddress}" id="mailAddress" class="form-control" placeholder="yamada@mail.com">
+										<label for="mailAddress"> メールアドレス: </label> <label
+											class="error-messages"> メールアドレスを入力してください </label> <input
+											type="text" name="mailAddress" th:field="*{mailAddress}"
+											id="mailAddress" class="form-control"
+											placeholder="yamada@mail.com">
 									</div>
 								</div>
 							</div>
@@ -56,13 +65,10 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="passwaord">
-											パスワード:
-										</label>
-										<label class="error-messages">
-											パスワードを入力してください
-										</label>
-										<input type="password" name="password" th:field="*{password}" id="password" class="form-control" placeholder="password">
+										<label for="passwaord"> パスワード: </label> <label
+											class="error-messages"> パスワードを入力してください </label> <input
+											type="password" name="password" th:field="*{password}"
+											id="password" class="form-control" placeholder="password">
 									</div>
 								</div>
 							</div>
@@ -76,18 +82,12 @@
 							</div>
 						</fieldset>
 					</form>
-		<div class="row">
-			<div class="col-lg-offset-3 col-lg-6 col-md-offset-2 col-md-8 col-sm-10 col-xs-12">
-				<!-- 背景をグレーに、埋め込んだようなコンポーネント -->
-				<div class="well">
-
-				
-<!-- ここから上を編集する必要はありません -->
-
-<!-- ここにモックのform要素を貼り付けます -->
 
 
-<!-- ここから下を編集する必要はありません -->
+					<!-- ここにモックのform要素を貼り付けます -->
+
+
+					<!-- ここから下を編集する必要はありません -->
 				</div>
 			</div>
 		</div>
