--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -75,7 +75,7 @@
 					</thead>
 					<tbody>
 						<tr th:each="employee:${employeeList}">
-							<td><a href="detail.html" th:href="@{/employee/showDetail(id=${'employee.id'})}"> <span th:text="${employee.name}">山田太郎</span>
+							<td><a href="detail.html" th:href="@{'/employee/showDetail?id='+${employee.id}}"> <span th:text="${employee.name}">山田太郎</span>
 							</a></td>
 							<td><span th:text="${employee.hireDate}">2016/12/1</span></td>
 							<td><span th:text="${employee.dependentsCount}">3人</span></td>
