--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -68,7 +68,7 @@
 					<!-- ここから上を編集する必要はありません -->
 
 					<!-- ここにモックのform要素を貼り付けます -->
-					<form method="post" action="list.html">
+					<form method="post" action="list.html" th:action="@{/employee/update}" th:object="${updateEmployeeForm}">
 						<fieldset>
 							<legend>従業員情報</legend>
 							<table class="table table-striped" th:object="${employee}">
@@ -86,7 +86,7 @@
 								</tr>
 								<tr>
 									<th nowrap>入社 日</th>
-									<td><span>2012/11/29</span></td>
+									<td><span th:text="*{hireDate}" >2012/11/29</span></td>
 								</tr>
 								<tr>
 									<th nowrap>メールアドレス</th>
