--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -115,7 +115,7 @@
 								</tr>
 								<tr>
 									<th nowrap>扶養人数</th>
-									<td><label class="error-messages"> 扶養人数を入力してください </label>
+									<td><label class="error-messages" th:errors=${updateEmployeeForm.dependentsCount}> error! </label>
 										<label class="control-label" style="color: red"
 										for="dependentsCount"></label> <input type="hidden" name="id" th:value="*{id}">
 										<input type="text" name="dependentsCount" id="dependentsCount"
